--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^3.3.6",
-    "less": "^2.6.1"
+    "less": "^2.6.1",
+    "gulp": "^3.9.0",
+    "gulp-less": "^3.1.0",
+    "babel-core": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
+    "browser-sync": "^2.13.0"
   }
 }
